Bug 359888: Don't return NS_CONTENT_SCRIPT_IS_EVENTHANDLER to the sink/parser since they can't deal. r/sr=jst a=stuart